# coppel-transcribe

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
coppel_transcribe/: lnx_utils.py  main.py  utils.py  win_utils.py
docs/: revision-total-version-listos.md
transcribe/: lnx_utils.py  main.py  utils.py  win_utils.py
