[tool.poetry]
name = "transcribe"
version = "0.1.0"
description = "Transcribe server info into a single txt file or a Google Sheet"
authors = ["Carlos Farid Nogales López <nem.farid@coppel.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
transcribe = "transcribe.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
