[tool.poetry]
name = "coppel-transcribe"
version = "0.1.0"
description = "Extrae la informaci칩n de los servidores de manera condensada para un copy-paste m치s r치pido"
authors = ["Carlos Farid Nogales L칩pez <nem.farid@coppel.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
coppel-transcribe = "coppel_transcribe.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
